# -Humanoid-Robotics-Textbook-Hackathon-1

./: .backend.gitignore  .dockerignore  .gitignore  CLAUDE.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  PROJECT_COMPLETION_CERTIFICATION.md  PROJECT_COMPLETION_SUMMARY.md  README.md  agent.py  agent_integration.py  api.py  check_qdrant_content.py  config.py  debug_testclient.py  direct_api_validation.py  docker-compose.yml  endpoints.py  final_validation.py  final_validation_report.md  fix_source_urls.py  hybrid_embeddings.py  ingest_docs.py  ingest_from_urls.py  local_embeddings.py  models.py  package-lock.json  patched_agent.py  reingest_with_local_embeddings.py  requirements.txt  retrieve.py  test_agent.py  test_api.py  test_complete_workflow.py  test_concurrent_requests.py  test_connections.py  test_content_existence.py  test_retrieval_functionality.py  validate_api_implementation.py  validation_report.md  (+2 more)
.claude/: settings.local.json
.specify/memory/: constitution.md
backend/: README.md  chunker.py  config.py  crawler.py  embedder.py  example_config.yaml  main.py  models.py  pyproject.toml  scraper.py  search_validator.py  sitemap_processor.py  test_bulk_processing.py  test_integration.py  test_pipeline.py  test_sitemap_extraction.py  utils.py  vector_store.py
backend/src/: client.py  error_handler.py  rag_service.py  startup_validator.py
docs/: re_ingestion_process.md
frontend-book/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
frontend-book/docs/: intro.md
history/adr/: 004-sidebar-restructuring-module-based-navigation-hierarchy.md  (+2 more)
(+253 files in other folders)
