[project]
name = "book-embedding-ingestion"
version = "0.1.0"
description = "URL Ingestion & Embedding Pipeline for Docusaurus documentation"
authors = [
    { name = "Developer", email = "developer@example.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "cohere>=4.0.0",
    "qdrant-client>=1.9.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.5.0",
    "psutil>=5.8.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

fastapi==0.110.0
starlette==0.36.3
httpx==0.24.1
pytest

